refactor on btn  into a reusable component

--- a/src/app/components/formularios/actualizar-personal/actualizar-personal.component.html
+++ b/src/app/components/formularios/actualizar-personal/actualizar-personal.component.html
@@ -18,12 +18,7 @@
                 selectedValue="{{personal().rol.id}}" />
 
 
-            <div class="save-edit">
-                <button type="submit" class="btn10">
-                    <span>Guardar</span>
-                    <div class="transition"></div>
-                </button>
-            </div>
+            <app-btn text="Guardar" />
         </form>
     </div>
 </div>
