--- a/src/app/pages/cambio-contrasena/cambio-contrasena.component.html
+++ b/src/app/pages/cambio-contrasena/cambio-contrasena.component.html
@@ -20,13 +20,8 @@
                     fieldName="new_password_confirmation" [form]="form" label="Confirma Nueva Contraseña"
                     (removeAlerts)="this.removerAlertas()" />
             </div>
-            <div class="wrapper">
-                <button href="#0" class="btn10">
-                    <span>ACTUALIZAR</span>
-                    <div class="transition"></div>
-                </button>
-            </div>
 
+            <app-btn text="Actualizar contraseña" />
         </form>
 
     </div>
