--- a/src/app/pages/contrasena-email/contrasena-email.component.html
+++ b/src/app/pages/contrasena-email/contrasena-email.component.html
@@ -20,12 +20,7 @@
 
                 <a routerLink="/login">Recordaste tu contraseña?, Inicia Sesion</a>
 
-                <div class="wrapper">
-                    <button type="submit" class="btn10">
-                        <span>Enviar</span>
-                        <div class="transition"></div>
-                    </button>
-                </div>
+                <app-btn text="Enviar" />
             </div>
         </form>
 
