--- a/src/app/pages/escanner-qr/escanner-qr.component.html
+++ b/src/app/pages/escanner-qr/escanner-qr.component.html
@@ -60,12 +60,7 @@
                 mensaje="Tiene que ser un correo valido"></app-errores-frontend>
         </div>
 
-        <div class="save-edit">
-            <button type="submit" class="btn10">
-                <span>Facturar </span>
-                <div class="transition"></div>
-            </button>
-        </div>
+        <app-btn text="Facturar" />
     </form>
 
 </div>
