--- a/src/app/pages/registro-rol/registro-rol.component.html
+++ b/src/app/pages/registro-rol/registro-rol.component.html
@@ -25,12 +25,7 @@
 
 
             </div>
-            <div class="wrapper">
-                <button href="#0" class="btn10">
-                    <span>REGISTRAR</span>
-                    <div class="transition"></div>
-                </button>
-            </div>
+            <app-btn text="Registrar" />
 
         </form>
     </div>
