--- a/src/app/pages/reset-password/reset-password.component.html
+++ b/src/app/pages/reset-password/reset-password.component.html
@@ -17,12 +17,7 @@
 
 
 
-        <div class="wrapper">
-            <button href="#0" class="btn10">
-                <span>Send</span>
-                <div class="transition"></div>
-            </button>
-        </div>
+        <app-btn text="actualizar contraseña" />
 
     </form>
 
