--- a/src/app/components/formularios/actualizar-rol/actualizar-rol.component.html
+++ b/src/app/components/formularios/actualizar-rol/actualizar-rol.component.html
@@ -16,12 +16,7 @@
 
 
 
-            <div class="save-edit">
-                <button type="submit" class="btn10">
-                    <span>Guardar</span>
-                    <div class="transition"></div>
-                </button>
-            </div>
+            <app-btn text="Guardar" />
         </form>
     </div>
 </div>
