--- a/src/app/components/formularios/actualizar-usuario/actualizar-usuario.component.html
+++ b/src/app/components/formularios/actualizar-usuario/actualizar-usuario.component.html
@@ -23,13 +23,7 @@
             <app-text error="Tiene que ser un correo valido" fieldName="email" [form]="form" label="Email"
                 (removeAlerts)="this.removerAlertas()" />
 
-
-            <div class="save-edit">
-                <button type="submit" class="btn10">
-                    <span>Guardar</span>
-                    <div class="transition"></div>
-                </button>
-            </div>
+            <app-btn text="Guardar" />
         </form>
     </div>
 </div>
