--- a/src/app/pages/registro-personal/registro-personal.component.html
+++ b/src/app/pages/registro-personal/registro-personal.component.html
@@ -31,12 +31,11 @@
 
 
             </div>
-            <div class="wrapper">
-                <button href="#0" class="btn10">
-                    <span>REGISTRAR</span>
-                    <div class="transition"></div>
-                </button>
-            </div>
+
+
+
+
+            <app-btn text="Registrar" />
 
         </form>
     </div>
