--- a/src/app/pages/registro-usuario/registro-usuario.component.html
+++ b/src/app/pages/registro-usuario/registro-usuario.component.html
@@ -31,12 +31,9 @@
                 <app-text type="email" error="Tiene que ser un correo valido" fieldName="email" [form]="form"
                     label="Email" (removeAlerts)="this.removerAlertas()" />
             </div>
-            <div class="wrapper">
-                <button href="#0" class="btn10">
-                    <span>REGISTRAR</span>
-                    <div class="transition"></div>
-                </button>
-            </div>
+
+            <app-btn text="Registrar" />
+
 
         </form>
     </div>
