--- a/src/app/components/shared/panel-admin/panel-admin.component.css
+++ b/src/app/components/shared/panel-admin/panel-admin.component.css
@@ -1,801 +1,149 @@
-/* ===== GOOGLE FONTS ===== */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
-
-/*===== VARIABLES CSS =====*/
-
-/*===== BASE =====*/
-
-h1 {
-  margin: 0;
-}
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-a {
-  text-decoration: none;
-}
-
-/*===== l NAV =====*/
-.l-navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: var(--nav-width);
-  height: 100vh;
-  background-color: var(--bg-color);
-  color: var(--white-color);
-  padding: 0.5rem 1.5rem 2rem;
-  transition: 0.5s;
-  z-index: var(--z-fixed);
-  /* z-index: 1; */
-}
-
-/*===== NAV =====*/
-.nav {
-  height: 100%;
+.flex {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  overflow: hidden;
-  overflow-y: auto;
-}
-.nav::-webkit-scrollbar {
-  width: 8px; /* Tamaño del scroll en vertical */
-  display: none; /* Ocultar scroll */
-}
-.main-content::-webkit-scrollbar {
-  display: none; /* Ocultar scroll */
-}
-.nav__brand {
-  display: grid;
-  grid-template-columns: max-content max-content;
-  justify-content: end;
-  align-items: center;
-  margin-bottom: 0rem;
-}
-.nav__toggle {
-  font-size: 1.25rem;
-  padding: 0.75rem;
-  cursor: pointer;
+  /* background: var(--sub-color); */
+  height: 100vh;
 }
 
-@media only screen and (max-width: 600px) {
-  .nav__toggle {
-    display: none;
-  }
-}
-
-.nav__logo {
-  color: var(--white-color);
-  font-weight: 600;
-}
-
-.nav__link {
-  display: grid;
-  grid-template-columns: max-content max-content;
-  /* display: flex;
-  width: 100px;
-  flex-direction: column; */
-  width: 200px;
-  align-items: center;
-  column-gap: 0.95rem;
-  padding: 0.75rem;
-  color: var(--white-color);
-  border-radius: 0.1rem;
-  margin-bottom: 1rem;
-  transition: 0.3s;
-  cursor: pointer;
-}
-.nav__link:hover {
-  background-color: var(--first-color);
-}
-.nav__icon {
-  font-size: 1.25rem;
-}
-.nav__name {
-  font-size: var(--small-font-size);
-}
-
-/*Expander menu*/
-.expander {
-  width: calc(var(--nav-width) + 9.25rem);
-}
-
-/*Add padding body*/
-body.body-pd {
-  padding: 0rem 0 0 15rem !important;
-}
-
-/*Active links menu*/
-.active {
-  background-color: var(--first-color);
-}
-
-/*===== COLLAPSE =====*/
-
-.l-navbar.nav .nav__list .profile img {
+.sidebar {
   width: 50px;
-  display: none;
+  padding: 10px;
+  background-color: var(--white-color);
+  color: white;
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
 }
-.collapse {
-  grid-template-columns: 20px max-content 1fr;
-}
-.collapse__link {
-  justify-self: flex-end;
-  transition: 0.5s;
-}
-
-.collapse__menu {
-  display: none;
-  padding: 0.75rem 2.25rem;
-}
-.collapse__sublink {
-  color: var(--sub-color);
-  font-size: var(--small-font-size);
-}
-.collapse__sublink:hover {
-  color: var(--white-color);
+.sidebar .menu-icon {
+  display: flex;
+  justify-content: flex-end;
 }
 
-/*Show collapse*/
-.showCollapse {
-  display: grid;
+.fa-bars {
+  margin-top: 15px;
+  margin-right: 15px;
+  cursor: pointer;
 }
 
-/*Rotate icon*/
-.rotate {
-  transform: rotate(180deg);
-}
-
-/*-----------------------header----------------------*/
-* {
-  box-sizing: border-box;
+.content {
+  width: 100%;
+  padding: 30px;
 }
 
 .header {
-  overflow: hidden;
-  background-color: #fff;
-  padding: 20px 35px;
-}
-@media only screen and (max-width: 414px) {
-  .header {
-    display: flex;
-    flex-direction: column;
-    place-items: center;
-  }
-  .header-right {
-    display: flex;
-  }
-}
-
-.header a {
-  float: left;
-  color: black;
-  text-align: center;
-  padding: 12px;
-  text-decoration: none;
-  font-size: 15px;
-  line-height: 15px;
-  border-radius: 4px;
-}
-
-.header a.logo {
-  /*---texto QRUD--del header*/
-  font-size: 25px;
-  font-weight: bold;
-}
-
-.header a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.header a.active {
-  background-color: dodgerblue;
-  color: white;
-}
-
-.header-right {
-  float: right;
-}
-
-@media screen and (max-width: 300px) {
-  .header a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-
-  .header-right {
-    float: none;
-  }
-}
-.profile img {
-  margin: 5px 0;
-  width: 100%;
-  height: 75px;
-}
-@media only screen and (max-width: 414px) {
-  .profile img {
-    margin-top: 22px !important;
-    padding: 5px;
-  }
-}
-
-/*-----------------------------------------*/
-/*---------------BUSCADOR------------------------*/
-.search-wrapper {
   display: flex;
-}
-.buscador input {
-  width: 0px;
-  height: 40px;
-  padding: 0 20px;
-  font-size: 13px;
-  color: var(--negro);
-  outline: none;
-  border: 1px solid var(--plateado);
-  border-radius: 30px;
-  transition: all 0.6s ease;
-}
-
-.btn-search {
-  position: absolute;
-  top: 0;
-  right: 0;
-  background: #857df8;
-  width: 55px;
-  height: 55px;
-  line-height: 55px;
-  text-align: center;
-  color: white;
-  font-size: 20px;
-  border-radius: 50%;
-  cursor: pointer;
-}
-
-.buscador:hover input {
-  width: 250px;
-}
-
-.buscador input:focus {
-  width: 250px;
-}
-
-.buscador {
-  padding: 6px;
-  margin-left: 3rem;
-  transform: translate(-34px, -2px);
-}
-/*-------main-----------*/
-main {
-  background: #f1f5f9;
-  min-height: 88vh;
-  padding: 1rem 3rem;
-  /* margin-left: 15rem; */
-}
-/*-----------titulo (qrud)-----------*/
-.dash-title {
-  color: var(--color-dark);
-  margin-bottom: 1rem;
-}
-/*--------contenedor de la tabla-----------*/
-.recent {
-  margin-top: 1rem;
-  margin-bottom: 3rem;
-}
-
-/*-----------sub-contenedor-grid-----------*/
-.activity-grid {
-  display: grid;
-  grid-template-columns: 85% 13%;
-  grid-column-gap: 1.5rem;
-}
-/*-------------Tabla----------------*/
-.activity-card {
-  background: #fff;
-  border-radius: 7px;
-}
-.activity-card h3 {
-  color: var(--text-grey);
-  margin: 1rem;
-}
-.activity-card table {
-  width: 100%;
-  border-collapse: collapse;
-}
-.activity-card thead {
-  background: #efefef;
-  text-align: left;
-}
-
-th,
-td {
-  font-size: 0.9rem;
-  padding: 1rem 0.5rem;
-  color: #3e3798;
-}
-
-td {
-  font-size: 0.8rem;
-}
-
-tbody tr:nth-child(even) {
-  background: #f9fafc;
-}
-/*---------------tabla responsive--------------------*/
-.table-responsive {
-  overflow-x: auto;
-}
-
-@media only screen and (max-width: 1200px) {
-  .sidebar {
-    width: 60px;
-    z-index: 150;
-  }
-
-  .sidebar .sidebar-header h3 span,
-  .sidebar li span:last-child {
-    display: none;
-  }
-
-  .sidebar .sidebar-header,
-  .sidebar li {
-    display: flex;
-    justify-content: center;
-  }
-
-  .main-content {
-    margin-left: 60px;
-  }
-
-  .main-content header {
-    left: 60px;
-    width: calc(100% - 600px);
-  }
-}
-/*RESPONSIVE*/
-@media only screen and (max-width: 860px) {
-  .activity-grid {
-    display: block;
-  }
-}
-
-@media only screen and (max-width: 450px) {
-  main {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-}
-/*----------botones editar eliminar-----------------*/
-.btn {
-  background: none;
-  border: none;
-}
-
-.fa-square-pen,
-.fa-user-xmark,
-.fa-user-check,
-.fa-user-slash {
-  color: #6c63ff;
-}
-.btn-group {
-  text-align: center;
-}
-.btn-action {
-  background: none;
-  border: none;
-}
-/*----------paginacion--------------*/
-ul.pagination {
-  display: inline-block;
-  padding: 0;
-  margin: 0;
-}
-
-ul.pagination li {
-  display: inline;
-}
-
-ul.pagination li a {
-  color: black;
-  float: left;
-  padding: 8px 16px;
-  text-decoration: none;
-}
-
-ul.pagination li a.active {
-  /* background-color: #857df8; */
-  color: white;
-  border-radius: 22px;
-}
-
-ul.pagination li a:hover:not(.active) {
-  background-color: #d4d2f3;
-  border-radius: 22px;
-}
-
-/*-----------------contenedor del formulario------------------------------------------------------------*/
-.container {
-  max-width: 700px;
-  width: 100%;
-  background: #fff;
-  padding: 25px 30px;
-  border-radius: 5px;
-  margin-top: 20px;
-}
-.container .title {
-  font-size: 25px;
-  font-weight: 500;
-  position: relative;
-}
-.container .title::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  height: 3px;
-  width: 30px;
-  background: linear-gradient(135deg, #3c14ec, rgb(187, 192, 255));
-}
-.container form .user-details {
-  display: flex;
-  flex-wrap: wrap;
+  align-items: center;
+  padding: 10px;
   justify-content: space-between;
-  margin: 35px 0 -20px 0;
 }
 
-/*----------contenido del formulario------------*/
-.group {
-  position: relative;
-  margin-bottom: 45px;
-}
-input {
-  font-size: 18px;
-  padding: 10px 10px 10px 5px;
-  display: block;
-  width: 300px;
-  border: none;
-  border-bottom: 1px solid #757575;
-}
-input:focus {
-  outline: none;
+.profile {
+  display: flex;
+  align-items: center;
+  gap: 15px;
 }
 
-/* LABEL ======================================= */
-.group label {
-  color: #999;
-  font-size: 16px;
-  font-weight: normal;
-  position: absolute;
-  pointer-events: none;
-  left: 5px;
-  top: 10px;
-  transition: 0.2s ease all;
-  -moz-transition: 0.2s ease all;
-  -webkit-transition: 0.2s ease all;
-}
-
-/* active state */
-input:focus ~ label,
-input:valid ~ label {
-  top: -20px;
-  font-size: 14px;
-  color: #6c63ff;
-}
-
-/* BOTTOM BARS ================================= */
-.bar {
-  position: relative;
-  display: block;
-  width: 300px;
-}
-.bar:before,
-.bar:after {
-  content: "";
-  height: 2px;
-  width: 0;
-  bottom: 1px;
-  position: absolute;
-  background: #6c63ff;
-  transition: 0.2s ease all;
-  -moz-transition: 0.2s ease all;
-  -webkit-transition: 0.2s ease all;
-}
-.bar:before {
-  left: 50%;
-}
-.bar:after {
-  right: 50%;
-}
-
-/* active state */
-input:focus ~ .bar:before,
-input:focus ~ .bar:after {
-  width: 50%;
-}
-
-/* HIGHLIGHTER ================================== */
-.highlight {
-  position: absolute;
-  height: 60%;
-  width: 100px;
-  top: 25%;
-  left: 0;
-  pointer-events: none;
-  opacity: 0.5;
-}
-
-/* active state */
-input:focus ~ .highlight {
-  -webkit-animation: inputHighlighter 0.01s ease-in-out;
-  -moz-animation: inputHighlighter 0.01s ease-in-out;
-  animation: inputHighlighter 0.01s ease-in-out;
-}
-
-/* ANIMATIONS ================ */
-@-webkit-keyframes inputHighlighter {
-  from {
-    background: #6c63ff;
-  }
-  to {
-    width: 0;
-    background: transparent;
-  }
-}
-@-moz-keyframes inputHighlighter {
-  from {
-    background: #6c63ff;
-  }
-  to {
-    width: 0;
-    background: transparent;
-  }
-}
-@keyframes inputHighlighter {
-  from {
-    background: #6c63ff;
-  }
-  to {
-    width: 0;
-    background: transparent;
-  }
-}
-
-/*----------------------------modal-----------------------------*/
-/* (background) */
-.modaledit {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-}
-
-/* Modal Content/Box */
-.modal-content-edit {
-  width: 400px;
-  background: #ffffff;
-  padding: 30px;
-  margin: auto;
-  margin-top: 100px;
-  border-radius: 4px;
-  font-family: "calibri";
-  color: #7971f9;
-  box-shadow: 7px 13px 27px rgb(34, 34, 34);
-}
-
-/* The Close Button */
-.closeedit {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.closeedit:hover,
-.closeedit:focus {
-  color: rgb(146, 104, 245);
+.random {
+  padding: 5px;
   text-decoration: none;
-  cursor: pointer;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
 }
 
-.form-edit {
-  position: relative;
-  margin-bottom: 19px;
-}
-
-.save-edit {
-  text-align: center;
-}
-/*----------contenido modal-----------------*/
-.group-edit {
-  position: relative;
-  margin-bottom: 30px;
-}
-
-.group-edit label {
-  color: #999;
-  font-size: 16px;
-  font-weight: normal;
-  position: absolute;
-  pointer-events: none;
-  left: 5px;
-  top: 10px;
-  transition: 0.2s ease all;
-  -moz-transition: 0.2s ease all;
-  -webkit-transition: 0.2s ease all;
-}
-
-/*---------------modal-----activar usuario------------*/
-.boton-modal label {
-  padding: 10px 15px;
-  background-color: #d7bff500;
-  color: #fff;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: all 300ms ease;
-}
-.boton-modal label:hover {
-  background-color: #d7bff5;
-}
-/*:::Fin Boton-Modal:::*/
-
-/*:::Ventana Modal:::*/
-#btn-modal {
-  display: none;
-}
-.container-modal {
-  width: 100%;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: rgba(144, 148, 150, 0.8);
-  display: none;
-  justify-content: center;
-  align-items: center;
-  z-index: 100;
-}
-#btn-modal:checked ~ .container-modal {
-  display: flex;
-}
-.content-modal {
-  width: 100%;
-  max-width: 400px;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 4px;
-}
-.content-modal h2 {
-  margin-bottom: 15px;
-  text-align: center;
-}
-.content-modal p {
-  padding: 15px 0px;
-  border-top: 1px solid #dbdbdb;
-  border-bottom: 1px solid #dbdbdb;
-  text-align: center;
-}
-.content-modal .btn-cerrar {
-  width: 100%;
-  margin-top: 15px;
-  display: flex;
-  justify-content: space-evenly;
-}
-.content-modal .btn-cerrar label {
-  padding: 7px 10px;
-  background-color: #b496f8;
-  color: #fff;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: all 300ms ease;
-  margin: 5px;
-}
-.content-modal .btn-cerrar label:hover {
-  background-color: #c6c1f7;
-}
-.cerrar-modal {
-  width: 100%;
-  height: 100vh;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
-@media screen and (max-width: 800px) {
-  .content-modal {
-    width: 90%;
-  }
-}
-/*:::Fin Ventana Modal:::*/
-
-/*:::Ventana Modal eliminaar:::*/
-#btn-modal-delet {
-  display: none;
-}
-.container-modal-delet {
-  width: 100%;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: rgba(144, 148, 150, 0.8);
-  display: none;
-  justify-content: center;
-  align-items: center;
-  z-index: 100;
-}
-#btn-modal-delet:checked ~ .container-modal-delet {
-  display: flex;
-}
-.content-modal-delet {
-  width: 100%;
-  max-width: 400px;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 4px;
-}
-.content-modal-delet h2 {
-  margin-bottom: 15px;
-  text-align: center;
-}
-.content-modal-delet p {
-  padding: 15px 0px;
-  border-top: 1px solid #dbdbdb;
-  border-bottom: 1px solid #dbdbdb;
-  text-align: center;
-}
-.content-modal-delet .btn-cerrar {
-  width: 100%;
-  margin-top: 15px;
-  display: flex;
-  justify-content: space-evenly;
-}
-.content-modal-delet .btn-cerrar label {
-  padding: 7px 10px;
-  background-color: #b496f8;
-  color: #fff;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: all 300ms ease;
-  margin: 5px;
-}
-.content-modal-delet .btn-cerrar label:hover {
-  background-color: #c6c1f7;
-}
-.cerrar-modal {
-  width: 100%;
-  height: 100vh;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
-@media screen and (max-width: 800px) {
-  .content-modal-delet {
-    width: 90%;
-  }
-}
-/*:::Fin Ventana Modal:::*/
-
-.header a.random {
-  background-color: dodgerblue;
+.nav_item {
+  margin-top: 10px;
   color: white;
+  font-size: 18px;
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.movil {
-  padding: 0;
+.nav_item:hover,
+.active-subroutes {
+  background-color: #fff;
+  color: var(--white-color);
 }
-.movil-links {
+
+.active-subroutes:hover {
+  background-color: var(--white-color);
+  border-radius: 10px;
+  color: white;
+  width: 100%;
+  flex-grow: 2;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+.nav_item a {
+  display: inline-block;
+  margin-left: 25px;
+  margin: 0 auto;
+  color: inherit;
+  text-decoration: none;
+}
+
+.sidebar.active {
+  width: 250px;
+}
+
+.hidding-text {
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  z-index: -100;
+}
+
+.text-appear {
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.5s ease;
+}
+.collapse_items {
   display: flex;
-  width: 100px;
   flex-direction: column;
+}
+.spread-collapse-items {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.submenu {
+  opacity: 0;
+  position: absolute;
+  z-index: -100;
+  visibility: hidden;
+  /* transition: all 0.1s ease;
+  -webkit-transition: all 0.1s ease;
+  -moz-transition: all 0.1s ease;
+  -ms-transition: all 0.1s ease;
+  -o-transition: all 0.1s ease; */
+}
+.submenu.active {
+  opacity: 1;
+  visibility: visible;
+  position: relative;
+  z-index: 0;
+}
+
+.rotate {
+  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
 }
