--- a/src/styles.css
+++ b/src/styles.css
@@ -24,7 +24,7 @@
 body {
   position: relative;
   margin: 0;
-  padding: 0rem 0 0 5.75rem;
+  /* padding: 0rem 0 0 5.75rem; */
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
   transition: 0.5s;
