working on an expanded rows  table component

--- a/src/app/pages/modulos/modulos.component.html
+++ b/src/app/pages/modulos/modulos.component.html
@@ -30,3 +30,52 @@
 
     </app-custom-modal>
 </div>
+
+<div class="grid">
+    <div class="grid-headers">
+        <h5>Nombre del modulo</h5>
+        <h5>Ruta</h5>
+        <h5>Icono</h5>
+        <h5>Acciones</h5>
+
+    </div>
+
+    <div class="grid-body">
+        <div class="grid-subbody-expanded">
+            <h5>usuarios</h5>
+            <h5>/users</h5>
+            <h5>fa-users</h5>
+            <h5><i class="fa fa-edit"></i> </h5>
+
+            <div class="grid-accordeon-header    ">
+                <h5>Nombre del Submodulo</h5>
+                <h5>Ruta</h5>
+                <h5>Icono</h5>
+                <h5>Acciones </h5>
+            </div>
+
+            <div class="grid-accordeon-body      ">
+                <h5>usuarios</h5>
+                <h5>/users</h5>
+                <h5>fa-users</h5>
+                <h5><i class="fa fa-edit"></i> </h5>
+            </div>
+
+        </div>
+        <div class="grid-subbody">
+            <h5>modulos</h5>
+            <h5>/modulo</h5>
+            <h5>fa-prgf</h5>
+            <h5><i class="fa fa-edit"></i></h5>
+
+
+
+        </div>
+
+
+
+    </div>
+
+
+
+</div>
