--- a/src/app/pages/modulos/modulos.component.css
+++ b/src/app/pages/modulos/modulos.component.css
@@ -1,199 +1,3 @@
-table {
-  width: 100%;
-  background: white;
-  margin-bottom: 1.25em;
-  border: solid 1px #dddddd;
-  border-collapse: collapse;
-  border-spacing: 0;
-  margin-top: 15px;
-  border-radius: 12px 12px 0 0;
-  overflow: hidden;
-}
-
-table tr th,
-table tr td {
-  padding: 0.5625em 0.625em;
-  font-size: 0.875em;
-  color: #3e3798;
-  border: 1px solid #f9f9f9;
-  text-align: center;
-}
-
-@media only screen and (max-width: 768px) {
-  table tr th,
-  table tr td {
-    padding-left: 28%;
-    width: auto;
-    color: #3e3798;
-  }
-  @media only screen and (max-width: 500px) {
-    table tr:first-child {
-      margin-top: 0;
-    }
-  }
-}
-table tr.even,
-table tr.alt,
-table tr:nth-of-type(even) {
-  background: #f9f9f9;
-}
-@media only screen and (max-width: 768px) {
-  table.resp,
-  .resp thead,
-  .resp tbody,
-  .resp tr,
-  .resp th,
-  .resp td,
-  .resp caption {
-    display: block;
-  }
-  table tr:first-child {
-    margin-top: 0 !important;
-  }
-
-  table.resp {
-    border: none;
-  }
-
-  .resp thead tr {
-    display: none;
-  }
-
-  .resp tbody tr {
-    margin: 2em 0;
-    background: #fbfbfb;
-  }
-
-  .resp td {
-    border: none;
-    border-bottom: 1px solid #dddddd;
-    position: relative;
-    padding-left: 45%;
-    text-align: right;
-  }
-
-  .resp tr td:last-child {
-    border-bottom: 1px double #dddddd;
-  }
-
-  .resp tr:last-child td:last-child {
-    border: none;
-  }
-
-  .resp td:before {
-    position: absolute;
-    top: 6px;
-    left: 6px;
-    width: 45%;
-    padding-right: 10px;
-    white-space: nowrap;
-    text-align: left;
-    font-weight: bold;
-  }
-  td:nth-of-type(1):before {
-    content: "Nombre";
-  }
-
-  td:nth-of-type(2):before {
-    content: "RFC";
-  }
-
-  td:nth-of-type(3):before {
-    content: "Direccion";
-  }
-
-  td:nth-of-type(4):before {
-    content: "Telefono";
-  }
-
-  td:nth-of-type(5):before {
-    content: "E-mail";
-  }
-  td:nth-of-type(6):before {
-    content: "Acciones";
-  }
-}
-
-/*-------------Tabla----------------*/
-@media only screen and (max-width: 1200px) {
-  .sidebar {
-    width: 60px;
-    z-index: 150;
-  }
-
-  .sidebar .sidebar-header h3 span,
-  .sidebar li span:last-child {
-    display: none;
-  }
-
-  .sidebar .sidebar-header,
-  .sidebar li {
-    display: flex;
-    justify-content: center;
-  }
-
-  .main-content {
-    margin-left: 60px;
-  }
-
-  .main-content header {
-    left: 60px;
-    width: calc(100% - 600px);
-  }
-}
-/*RESPONSIVE*/
-@media only screen and (max-width: 860px) {
-  .activity-grid {
-    display: block;
-  }
-}
-
-@media only screen and (max-width: 450px) {
-  main {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-}
-
-/*----------botones editar eliminar-----------------*/
-.btn {
-  background: none;
-  border: none;
-}
-
-.fa-square-pen,
-.fa-user-xmark,
-.fa-user-check,
-.fa-user-slash,
-.btn,
-.fa-qrcode {
-  color: #6c63ff;
-  padding: 0.3rem;
-  cursor: pointer;
-}
-.btn-group {
-  text-align: center;
-}
-.btn-action {
-  background: none;
-  border: none;
-}
-
-td.icons {
-  width: 9rem;
-}
-
-.spinner-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-}
-.container {
-  margin: 0 auto;
-  display: block;
-  position: absolute;
-}
-
 /* OPEN MODAL BUTTON */
 .flex {
   display: flex;
@@ -212,6 +16,7 @@ td.icons {
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
+  cursor: pointer;
 }
 .mr {
   margin-right: 10px;
@@ -234,4 +39,92 @@ td.icons {
 .accordion-content.open {
   padding: 1rem;
   max-height: 500px; /* o un valor suficientemente grande */
+}
+
+/* table */
+.grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  margin: 0 auto;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+.grid-headers {
+  grid-column: 1 / span 4;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  border: 1px solid #ccc;
+  overflow: hidden;
+}
+
+.grid-headers h5 {
+  margin: 0;
+  text-align: center;
+  padding: 15px;
+  border-bottom: none;
+  border-left: 1px solid #ccc;
+}
+
+h5 {
+  text-align: center;
+  padding: 15px;
+  margin: 0;
+}
+
+.grid-body,
+.grid-subbody,
+.grid-subbody-expanded,
+.grid-accordeon-header,
+.grid-accordeon-body {
+  grid-column: 1 / span 4;
+  display: grid;
+  position: relative;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.grid-subbody-expanded {
+  cursor: pointer;
+}
+
+.grid-subbody-expanded::before {
+  content: ">";
+  position: absolute;
+  left: 15px;
+  top: 10px;
+  font-size: 20px;
+  font-weight: bold;
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+}
+
+.grid-subbody-expanded.active::before {
+  transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+}
+
+.grid-accordeon-header,
+.grid-accordeon-body {
+  height: 0;
+  visibility: hidden;
+  position: absolute;
+  z-index: -22;
+  transition: all 0.3s ease-out;
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+}
+
+.grid-accordeon-header.active,
+.grid-accordeon-body.active {
+  height: 100%;
+  visibility: visible;
+  position: relative;
 }
