--- a/src/app/components/shared/inputs/text/text.component.css
+++ b/src/app/components/shared/inputs/text/text.component.css
@@ -7,7 +7,7 @@ input {
   font-size: 18px;
   padding: 10px 10px 10px 5px;
   display: block;
-  width: 300px;
+  /* width: 300px; */
   border: none;
   border-bottom: 1px solid #757575;
   background: transparent;
@@ -42,7 +42,7 @@ input:valid ~ label {
 .bar {
   position: relative;
   display: block;
-  width: 300px;
+  /* width: 300px; */
 }
 .bar:before,
 .bar:after {
