--- a/src/app/pages/modulos/modulos.component.html
+++ b/src/app/pages/modulos/modulos.component.html
@@ -28,17 +28,26 @@
         <div modalContent class="scrollbar">
             <h3>Agregar Modulo</h3>
 
-            <form action="" [formGroup]="form">
+            <form action="" [formGroup]="form" (ngSubmit)="submit()">
                 <div class="d-flex">
                     <app-text error="El campo es obligatorio" fieldName="name" label="Nombre del modulo"
                         [form]="form" />
+                    @if(!isSubmodule()){
                     <app-text error="El campo es obligatorio" fieldName="route" label="Ruta" [form]="form" />
-                    <app-text error="El campo es obligatorio" fieldName="icon" label="Icono" [form]="form" />
+
+                    }
+
+                    <div class="icon-container">
+                        <i class="fa {{form.get('icon')?.value}}  "></i>
+                        <app-text error="El campo es obligatorio" fieldName="icon" label="Icono" [form]="form" />
+
+                    </div>
 
                 </div>
 
 
-                <button modalTrigger class="btn d-block" (click)="addSubmodule()" style="align-self: flex-start;">
+                <button type="button" modalTrigger class="btn d-block" (click)="addSubmodule()"
+                    style="align-self: flex-start;">
                     <i class="fa-solid fa-book-bookmark fa-xl mr"></i>
                     Agregar Submodulos</button>
 
@@ -50,7 +59,12 @@
                         <app-text error="El campo es obligatorio" fieldName="name" label="Nombre del submodulo"
                             [form]="submodule" />
                         <app-text error="El campo es obligatorio" fieldName="route" label="Ruta" [form]="submodule" />
-                        <app-text error="El campo es obligatorio" fieldName="icon" label="Icono" [form]="submodule" />
+                        <div class="icon-container">
+                            <i class="fa {{submodule.get('icon')?.value}}  "></i>
+                            <app-text error="El campo es obligatorio" fieldName="icon" label="Icono"
+                                [form]="submodule" />
+
+                        </div>
 
                     </div>
                 </div>
@@ -59,7 +73,12 @@
 
 
                 }
-
+                <div class="right-btn">
+                    <button class="btn " type="submit">
+                        <i class="fa-solid fa-paper-plane fa-xl mr"></i>
+                        Enviar
+                    </button>
+                </div>
 
 
             </form>
