--- a/src/app/components/shared/custom-modal/custom-modal.component.css
+++ b/src/app/components/shared/custom-modal/custom-modal.component.css
@@ -32,7 +32,7 @@
 .modal-box {
   padding: 0px 20px 20px 20px;
   background-color: white;
-  width: 800px;
+  min-width: 800px;
   min-height: 450px;
   border-radius: 15px;
   -webkit-border-radius: 15px;
