--- a/src/app/components/shared/custom-modal/custom-modal.component.css
+++ b/src/app/components/shared/custom-modal/custom-modal.component.css
@@ -32,8 +32,8 @@
 .modal-box {
   padding: 0px 20px 20px 20px;
   background-color: white;
-  min-width: 800px;
-  min-height: 450px;
+  min-width: fit-content;
+  min-height: fit-content;
   border-radius: 15px;
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
